--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,8 +36,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_core: ^2.3.0
   firebase_auth: ^4.1.5
   cloud_firestore: ^4.1.0
+  flutter_spinkit: ^5.1.0
   provider: ^6.0.4
 
 
